--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "dependencies": {
     "aos": "^2.3.4",
     "axios": "^1.7.5",
-    "bootstrap": "^5.3.3",
-    "bootstrap-vue": "^2.23.1",
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.3",
+    "typed.js": "^2.1.0",
     "vue": "^2.6.14",
     "vue-pagination-2": "^3.1.0",
     "vue-router": "^3.6.5",
