--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "vue-loader": "^17.4.2",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "stylelint-fix": "^2.2.6"
   },
   "eslintConfig": {
     "root": true,
